# Speech-Program

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.py  app.spec  build.bat  build.sh  pyproject.toml  requirements.txt  speech_app.py  speech_program.py
.github/workflows/: ci.yml
src/: app.py
src/constants/: messages.py
src/models/: Engine.py  InterfaceApp.py  __init__.py  interface_app.py  speech_engine.py  speech_engine_model.py
src/ui/: interface_app.py  styles.py
src/ui/components/: speech_input.py
src/ui/views/: main_view.py
src/utils/: constants.py  messages.py  styles.py  tkinter_exception_hook.py  utils.py
test/: conftest.py
test/test_constants/: test_messages.py
test/test_core/: test_speech_engine.py
test/test_models/: test_Engine.py  test_InterfaceApp.py  test_engine_t.py  test_interface_app.py  test_speech_engine.py  test_speech_engine_model.py
test/test_ui/: test_interface_app.py  test_styles.py
test/test_ui/test_components/: test_speech_input.py
test/test_ui/test_views/: test_main_view.py
tests/: conftest.py
tests/test_configs/: test_default_config.py  test_development_config.py  test_logger_config.py  test_production_config.py  test_testing_config.py
tests/test_constants/: test_messages.py
tests/test_models/: test_speech_engine_model.py
tests/test_ui/: test_interface_app.py  test_styles.py
tests/test_ui/test_components/: test_speech_input.py
tests/test_ui/test_views/: test_main_view.py
tests/test_utils/: test_dialogs.py  test_error_handler.py
